Fixing overflow/scroll styles in edge cases

--- a/src/styles/screens/form-screen/form-screen.less
+++ b/src/styles/screens/form-screen/form-screen.less
@@ -53,11 +53,12 @@
         margin-bottom: 10px;
       }
 
-      .container-message {
-        .text {
-          // .fLight();
-        }
-      }
+      // TODO: if should change container message font-weight remove the following comment
+      // .container-message {
+      //   .text {
+      //     .fLight();
+      //   }
+      // }
     }
 
     > .form-answers {
