--- a/src/styles/screens/screen.less
+++ b/src/styles/screens/screen.less
@@ -36,6 +36,7 @@
     -webkit-box-flex: 1;
     flex-grow: 1;
     overflow: auto;
+    padding-bottom: 15px;
 
     > * {
       &:not(.btn) {
@@ -62,9 +63,9 @@
     right: 0;
     bottom: 0;
     background-color: var(--white);
-    -webkit-box-shadow: 0px -10px 8px rgba(255, 255, 255, 1);
-    -moz-box-shadow: 0px -10px 8px rgba(255, 255, 255, 1);
-    box-shadow: 0px -10px 8px rgba(255, 255, 255, 1);
+    -webkit-box-shadow: 0px -10px 8px 8px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 0px -10px 8px 8px rgba(255, 255, 255, 1);
+    box-shadow: 0px -10px 8px 8px rgba(255, 255, 255, 1);
   }
 
   .animated-element {
