--- a/src/styles/screens/summary-screen.less
+++ b/src/styles/screens/summary-screen.less
@@ -23,11 +23,11 @@
   .screen-content {
     display: flex;
     flex-direction: column;
-    padding-top: 30px;
+    padding-top: 20px;
 
     .temp {
       &-footer {
-        margin-top: 20px;
+        margin-top: 15px;
         order: 5;
       }
 
@@ -41,7 +41,7 @@
     }
 
     .form-properties {
-      margin: 20px auto 20px;
+      margin: 15px auto;
     }
 
     .score-info {
